auth + db-connection + hashing

--- a/Views/Auth/Regist.cshtml
+++ b/Views/Auth/Regist.cshtml
@@ -1,45 +1,50 @@
-﻿
+﻿@model LibraryApp.Models.UserIdentityReg
+
+
 <div class="container form-container d-flex justify-content-center align-items-center">
 
-	<form class="form" asp-controller="" asp-action="">
+	<form class="form" asp-controller="Auth" asp-action="Regist">
 
 		<div class="form-floating mb-3">
-			<input id="username-inp" name="usr" type="text" class="form-control" placeholder="#" />
-			<label for="username-inp">Username</label>
+			<input asp-for="Username" type="text" class="form-control" placeholder="#" />
+			<label asp-for="Username"></label>
 		</div>
 
 		<div class="form-floating mb-3">
-			<input id="email-inp" name="eml" type="email" class="form-control" placeholder="#" />
-			<label for="email-inp">Email</label>
+			<input asp-for="Email" type="email" class="form-control" placeholder="#" />
+			<label asp-for="Email"></label>
 		</div>
 
 		<div class="input-group mb-3">
 			<div class="form-floating">
-				<input id="password-inp" name="pwd" type="password" class="form-control" placeholder="#" />
-				<label for="password-inp">Password</label>
+				<input asp-for="Password" type="password" class="form-control" placeholder="#" />
+				<label asp-for="Password"></label>
 			</div>
 			<div class="input-group-text align-items-center">
-				<span role="button" onclick="handlePwdVisibility(this, 'password-inp')" id="show-pwd-btn" class="material-symbols-outlined">
-					visibility_off
+				<span role="button" onclick="handlePwdVisibility(this, 'Password')" id="show-pwd-btn" class="material-symbols-outlined">
+					visibility
 				</span>
 			</div>
 		</div>
 
 		<div class="input-group mb-3">
 			<div class="form-floating">
-				<input id="password-repeat-inp" name="pwd-rpt" type="password" class="form-control" placeholder="#" />
-				<label for="password-repeat-inp">Password</label>
+				<input asp-for="RepeatedPassword" type="password" class="form-control" placeholder="#" />
+				<label asp-for="RepeatedPassword"></label>
 			</div>
 			<div class="input-group-text align-items-center">
-				<span role="button" onclick="handlePwdVisibility(this, 'password-repeat-inp')" id="show-pwd-btn" class="material-symbols-outlined">
-					visibility_off
+				<span role="button" onclick="handlePwdVisibility(this, 'RepeatedPassword')" id="show-pwd-btn" class="material-symbols-outlined">
+					visibility
 				</span>
 			</div>
 		</div>
 
-		<input class="btn btn-warning w-100 py-2" type="submit" name="sbm" value="Login" />
+		<input class="btn btn-warning w-100 py-2" type="submit" name="sbm" value="Register" />
 
-		<a asp-action="Login" class="float-end mt-2">Already have an account?</a>
+		<a asp-action="Login" class="float-end mt-2 ps-3">Already have an account?</a>
+
+		<div asp-validation-summary="All" class="mt-2 text-danger"></div>
+
 	</form>
 
 
