--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -1,27 +1,31 @@
-﻿
+﻿@model LibraryApp.Models.UserIdentity
+
+
 <div class="container form-container d-flex justify-content-center align-items-center">
 
-	<form class="form" asp-controller="" asp-action="">
+	<form class="form" asp-controller="Auth" asp-action="Login">
 		<div class="form-floating mb-3">
-			<input id="username-inp" name="usr" type="text" class="form-control" placeholder="#" />
-			<label for="username-inp">Username</label>
+			<input asp-for="Username" type="text" class="form-control" placeholder="#" />
+			<label asp-for="Username"></label>
 		</div>
 
 		<div class="input-group mb-3">
 			<div class="form-floating">
-				<input id="password-inp" name="pwd" type="password" class="form-control" placeholder="#" />
-				<label for="password-inp">Password</label>
+				<input asp-for="Password" type="password" class="form-control" placeholder="#" />
+				<label asp-for="Password"></label>
 			</div>
 			<div class="input-group-text align-items-center">
-				<span role="button" onclick="handlePwdVisibility(this, 'password-inp')" id="show-pwd-btn" class="material-symbols-outlined">
-					visibility_off
+				<span role="button" onclick="handlePwdVisibility(this, 'Password')" id="show-pwd-btn" class="material-symbols-outlined">
+					visibility
 				</span>
 			</div>
 		</div>
 
 		<input class="btn btn-warning w-100 py-2" type="submit" name="sbm" value="Login" />
 
-		<a asp-action="Regist" class="float-end mt-2">Do not have an account?</a>
+		<a asp-action="Regist" class="float-end mt-2 ps-3">Do not have an account?</a>
+
+		<div asp-validation-summary="All" class="mt-2 text-danger"></div>
 	</form>
 
 
