--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,43 +9,55 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md bg-primary fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand text-light" href="#">OneLib</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggle">
-                <span class="material-symbols-outlined text-light">
-                    menu
-                </span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbar-toggle">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a asp-controller="Home" asp-action="Index" class="nav-link text-light">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-controller="Home" asp-action="Books" class="nav-link text-light">Books</a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-controller="Auth" asp-action="Login" class="nav-link text-light">Login</a>
-                    </li>
-                </ul>
+	<nav class="navbar navbar-expand-md bg-primary fixed-top">
+		<div class="container-fluid">
+			<a class="navbar-brand text-light" href="#">OneLib</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggle">
+				<span class="material-symbols-outlined text-light">
+					menu
+				</span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbar-toggle">
+				<ul class="navbar-nav me-auto mb-2 mb-md-0">
+					<li class="nav-item">
+						<a asp-controller="Home" asp-action="Index" class="nav-link text-light">Home</a>
+					</li>
+					<li class="nav-item">
+						<a asp-controller="Home" asp-action="Books" class="nav-link text-light">Books</a>
+					</li>
+					@if (!User.Identity!.IsAuthenticated)
+					{
+						<li class="nav-item">
+							<a asp-controller="Auth" asp-action="Login" class="nav-link text-light">Login</a>
+						</li>
+					}
+					else
+					{
+						<li class="nav-item">
+							<a asp-controller="Home" asp-action="Favorites" class="nav-link text-light">Favorites</a>
+						</li>
+						<li class="nav-item">
+							<a asp-controller="Auth" asp-action="Logout" class="nav-link text-light">Logout</a>
+						</li>
+					}
+				</ul>
 
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search">
-                    <button class="btn btn-warning" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
+				<form class="d-flex" role="search">
+					<input class="form-control me-2" type="search" placeholder="Search">
+					<button class="btn btn-warning" type="submit">Search</button>
+				</form>
+			</div>
+		</div>
+	</nav>
 
 	@RenderBody()
 
-    <footer class="bg-primary d-flex justify-content-between text-light p-3">
-        <span>@@Copyrights @DateTime.Now.ToString("dd-MM-yy hh:mm:ss")</span>
-        <span>OneLib Bookstore</span>
-    </footer>
+	<footer class="bg-primary d-flex justify-content-between text-light p-3">
+		<span>@@Copyrights @DateTime.Now.ToString("dd-MM-yy hh:mm:ss")</span>
+		<span>OneLib Bookstore</span>
+	</footer>
 
-    <script src="~/js/index.js"></script>
+	<script src="~/js/index.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
