--- a/Views/Auth/Regist.cshtml
+++ b/Views/Auth/Regist.cshtml
@@ -7,18 +7,18 @@
 
 		<div class="form-floating mb-3">
 			<input asp-for="Username" type="text" class="form-control" placeholder="#" />
-			<label asp-for="Username"></label>
+			<label asp-for="Username" class="form-label"></label>
 		</div>
 
 		<div class="form-floating mb-3">
 			<input asp-for="Email" type="email" class="form-control" placeholder="#" />
-			<label asp-for="Email"></label>
+			<label asp-for="Email" class="form-label"></label>
 		</div>
 
 		<div class="input-group mb-3">
 			<div class="form-floating">
 				<input asp-for="Password" type="password" class="form-control" placeholder="#" />
-				<label asp-for="Password"></label>
+				<label asp-for="Password" class="form-label"></label>
 			</div>
 			<div class="input-group-text align-items-center">
 				<span role="button" onclick="handlePwdVisibility(this, 'Password')" id="show-pwd-btn" class="material-symbols-outlined">
@@ -30,7 +30,7 @@
 		<div class="input-group mb-3">
 			<div class="form-floating">
 				<input asp-for="RepeatedPassword" type="password" class="form-control" placeholder="#" />
-				<label asp-for="RepeatedPassword"></label>
+				<label asp-for="RepeatedPassword" class="form-label"></label>
 			</div>
 			<div class="input-group-text align-items-center">
 				<span role="button" onclick="handlePwdVisibility(this, 'RepeatedPassword')" id="show-pwd-btn" class="material-symbols-outlined">
