--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
+	<div id="anchor" class="p-relative" style="height: 56px"></div>
 	<nav class="navbar navbar-expand-md bg-primary fixed-top">
 		<div class="container-fluid">
 			<a class="navbar-brand text-light" href="#">OneLib</a>
@@ -36,6 +37,17 @@
 						<li class="nav-item">
 							<a asp-controller="Home" asp-action="Favorites" class="nav-link text-light">Favorites</a>
 						</li>
+
+						@*<li>DEBUG-->@User.Claims.FirstOrDefault(c => c.Type == System.Security.Claims.ClaimTypes.Role)?.Type</li>
+						<li>DEBUG-->@User.Claims.FirstOrDefault(c => c.Type == System.Security.Claims.ClaimTypes.Role)?.Value</li>
+*@
+						if (User.IsInRole("Admin"))
+						{
+							<li class="nav-item">
+								<a asp-controller="Home" asp-action="" class="nav-link text-light">ADMIN_OPTION</a>
+							</li>
+						}
+
 						<li class="nav-item">
 							<a asp-controller="Auth" asp-action="Logout" class="nav-link text-light">Logout</a>
 						</li>
