--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -3,7 +3,7 @@
 
 <div class="container form-container d-flex justify-content-center align-items-center">
 
-	<form class="form" asp-controller="Auth" asp-action="Login">
+	<form class="form" method="post">
 		<div class="form-floating mb-3">
 			<input asp-for="Username" type="text" class="form-control" placeholder="#" />
 			<label asp-for="Username" class="form-label"></label>
