--- a/Views/Home/BookDetails.cshtml
+++ b/Views/Home/BookDetails.cshtml
@@ -11,7 +11,7 @@
 			<li>@Model.Description</li>
 		</ul>
 
-		<a asp-controller="Home" asp-action="Read" asp-route-ActionType="Read" asp-route-Id="@Model.Id" class="btn btn-success">Read</a>
+		<a asp-controller="Home" asp-action="Read" asp-route-ActionType="Read" asp-route-Id="@Model.Id" target="_blank" class="btn btn-success">Read</a>
 		<a asp-controller="Home" asp-action="Read" asp-route-ActionType="Download" asp-route-Id="@Model.Id" class="btn btn-warning">Download</a>
 	</div>
 </div>
