--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,6 +10,9 @@
 		<div class="carousel-item">
 			<img src="https://picsum.photos/1200/1200" class="object-fit-cover d-block w-100" alt="">
 		</div>
+		<div class="carousel-item">
+			<img src="https://picsum.photos/800/800" class="object-fit-cover d-block w-100" alt="">
+		</div>
 	</div>
 	<button class="carousel-control-prev" type="button" data-bs-target="#carousel-main" data-bs-slide="prev">
 		<span class="carousel-control-prev-icon"></span>
