--- a/Views/Admin/AddBook.cshtml
+++ b/Views/Admin/AddBook.cshtml
@@ -11,7 +11,7 @@
 	{
 		@if (Context.Response.StatusCode == 400)
 		{
-			<div class="alert alert-success" role="alert">Book added successfully.</div>
+			<div class="alert alert-success" role="alert">Book add error.</div>
 		}
 	}
 	<form method="post" asp-controller="Admin" asp-action="AddBook" class="form" enctype="multipart/form-data">
