--- a/Views/Home/Books.cshtml
+++ b/Views/Home/Books.cshtml
@@ -1,33 +1,21 @@
-﻿@model LibraryApp.Models.BooksViewModel
-@addTagHelper *, LibraryApp
+﻿@model IEnumerable<Book>
+@inject IConfiguration Config
 
-@using LibraryApp.Extensions;
+@{
+	int page = @ViewBag.pageParams.Page;
+	int pageSize = int.Parse(Config["Views:Books:PageSize"]!);
+}
 
 <div class="container-fluid my-3 px-4">
-	<div class="d-inline-flex align-items-center">
-		<h1 class="me-3 mb-0">Books</h1>
-		@if (User.IsInRole("Admin"))
-		{
-			<a asp-controller="Admin" asp-action="AddBook" class="btn btn-success">Add book</a>
-		}
-	</div>
 
-	@if (Model.Values.Count() < 1)
+<div class="d-inline-flex align-items-center">
+	<h1 class="me-3 mb-0">Books</h1>
+	@if (User.IsInRole("Admin"))
 	{
-		<h5 class="text-danger">No items.</h5>
+		<a asp-controller="Admin" asp-action="AddBook" class="btn btn-success">Add book</a>
 	}
+</div>
 
-	<div class="row">
-		@foreach (var book in Model.Values)
-		{
-			<div class="px-3 col-12 col-sm-6 col-md-4 col-lg-3 text-center">
-				<h4>@book.Name</h4>
-				<a asp-controller="Home" asp-action="Books" asp-route-Id="@book.Id">
-					<img style="min-height: 24rem" class="zoom rounded img-fluid object-fit-cover" alt="@book.Name" src="data:image/png;base64,@Convert.ToBase64String(book.Image)" />
-				</a>
-			</div>
-		}
-	</div>
+@await Component.InvokeAsync("BookList", new BooksViewModel(page, pageSize, Model))
 
-	<page-link page-action="Books" view-model="@Model" />
 </div>
