--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,56 +9,79 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-		<nav class="position-relative navbar navbar-expand-md bg-primary fixed-top">
-			<div class="container-fluid">
-				<a class="navbar-brand text-light" href="#">OneLib</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggle">
-					<span class="material-symbols-outlined text-light">
-						menu
-					</span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbar-toggle">
-					<ul class="navbar-nav me-auto mb-2 mb-md-0">
-						<li class="nav-item">
-							<a asp-controller="Home" asp-action="Index" class="nav-link text-light">Home</a>
-						</li>
-						<li class="nav-item">
-							<a asp-controller="Home" asp-action="Books" asp-route-Id="" class="nav-link text-light">Books</a>
-						</li>
-						@if (!User.Identity!.IsAuthenticated)
+	<nav class="position-relative navbar navbar-expand-md bg-primary fixed-top">
+		<div class="container-fluid">
+			<a class="navbar-brand text-light" href="#">OneLib</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggle">
+				<span class="material-symbols-outlined text-light">
+					menu
+				</span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbar-toggle">
+				<ul class="navbar-nav me-auto mb-2 mb-md-0">
+					@*@{
+						Dictionary<string, string> parameters = new();
+						var queryString = Context.Request.QueryString;
+						if (queryString.HasValue)
 						{
-							<li class="nav-item">
-								<a asp-controller="Auth" asp-action="Login" asp-route-ReturnUrl="@Context.Request.Path" class="nav-link text-light">Login</a>
-							</li>
-						}
-						else
-						{
-							<li class="nav-item">
-								<a asp-controller="Home" asp-action="Favorites" class="nav-link text-light">Favorites</a>
-							</li>
-
-							if (User.IsInRole("Admin"))
+							string query = queryString.ToString().Substring(1);
+							string[] keyValuesPairsStr = query.Split('&');
+							foreach (var pair in keyValuesPairsStr)
 							{
-								<li class="nav-item">
-									<a asp-controller="Home" asp-action="" class="nav-link text-light">ADMIN_OPTION</a>
-								</li>
+								string[] keyValue = pair.Split('=');
+								parameters.Add(keyValue[0], keyValue[1]);
 							}
+						}
 
+						string pattern = "";
+						parameters.TryGetValue("pattern", out pattern!);
+					}*@
+
+					<li class="nav-item">
+						<a asp-controller="Home" asp-action="Index" class="nav-link text-light">Home</a>
+					</li>
+					<li class="nav-item">
+						<a asp-controller="Home" asp-action="Books" asp-route-Id="" class="nav-link text-light">Books</a>
+					</li>
+					@if (!User.Identity!.IsAuthenticated)
+					{
+						<li class="nav-item">
+							<a asp-controller="Auth" asp-action="Login" asp-route-ReturnUrl="@Context.Request.Path" class="nav-link text-light">Login</a>
+						</li>
+					}
+					else
+					{
+						<li class="nav-item">
+							<a asp-controller="Home" asp-action="SavedBooks" class="nav-link text-light">Saved</a>
+						</li>
+
+						if (User.IsInRole("Admin"))
+						{
 							<li class="nav-item">
-								<a asp-controller="Auth" asp-action="Logout" class="nav-link text-light">Logout</a>
+								<a asp-controller="Home" asp-action="AdminPanel" class="nav-link text-light">ADMIN_OPTION</a>
 							</li>
 						}
-					</ul>
 
-					<form method="get" class="d-flex" role="search" asp-controller="Home" asp-action="Books">
-						<input value="@Context.Request.Query["pattern"]" name="pattern" class="form-control me-2" type="search" placeholder="Search">
-						<button class="btn btn-warning" type="submit">Search</button>
-					</form>
-				</div>
+						<li class="nav-item">
+							<a asp-controller="Auth" asp-action="Logout" class="nav-link text-light">Logout</a>
+						</li>
+					}
+				</ul>
+
+				@{
+					string action = Context.Request.RouteValues["action"]!.ToString()!;
+					action = action.Equals("SavedBooks") ? "SavedBooks" : "Books";
+				}
+
+				<form method="get" class="d-flex" role="search" asp-controller="Home" asp-action="@action">
+					<input value="@Context.Request.Query["pattern"]" name="pattern" class="form-control me-2" type="search" placeholder="Search">
+					<button class="btn btn-warning" type="submit">Search</button>
+				</form>
 			</div>
-		</nav>
+		</div>
+	</nav>
 
-		@RenderBody()
+	@RenderBody()
 
 	<footer id="footer" class="w-100 position-absolute bg-primary d-flex justify-content-between text-light p-3">
 		<span>@@Copyrights @DateTime.Now.ToString("dd-MM-yy hh:mm:ss")</span>
